[package]
edition = "2018"
name = "marketplace"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.11"
spl-token = "3.2.0"
spl-token-metadata = "0.0.1"

[dev-dependencies]
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"


[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"
