[package]
edition = "2018"
name = "marketplace"
version = "0.1.0"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.11"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }


[dev-dependencies]
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"


[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"
